# issues

./: .gitignore  README.md
clion_rocket/: Cargo.toml
clion_rocket/src/: main.rs
clion_sqlite_build/: Cargo.toml  README.md  test.db
clion_sqlite_build/migrations/2020-07-12-084146_create_posts/: down.sql  up.sql
clion_sqlite_build/src/: lib.rs  schema.rs
ff_iframe/: manifest.json
ff_iframe/js/: background.js
functional_agent/: Cargo.toml  index.html
functional_agent/src/: api_agent.rs  component_broker.rs  functional.rs  main.rs  non_functional.rs
jest_test/: jest.config.js  package-lock.json  package.json  sum.js  sum.test.js
my-app/: package-lock.json
reqwest_panic/: Cargo.toml
reqwest_panic/src/: main.rs
rust_requests/: Cargo.toml
rust_requests/src/: main.rs
sqlite_test/: Cargo.toml
sqlite_test/src/: lib.rs
trait_impl/: Cargo.toml
trait_impl/examples/demo/: Cargo.toml
trait_impl/examples/demo/src/: main.rs
trait_impl/src/: lib.rs
