[package]
name = "functional_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
yew-agent = "0.1.0"
yew = "0.19.3"
yewtil = "^0.4"
yew-router = "0.16.0"
log = "0.4.6"
wasm-logger = "0.2.0"